--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="header-content">
-            <button class="menu-btn" aria-label="Abrir menú">&#9776;</button>
+<header>
+    <div class="navbar">
+        <div class="navbar-titulo">
             <h1>Ludoteca Andana</h1>
-            <img src="img/logo.png" alt="Logo Ludoteca Andana" class="logo-header">
         </div>
-        <nav class="menu-opciones">
-            <!-- Opciones del menú desplegable -->
+        <nav class="navbar-menu">
             <a href="index.html">Inicio</a>
             <a href="categoria1.html">Familiares</a>
             <a href="categoria2.html">Estrategia</a>
@@ -24,7 +22,8 @@
             <a href="categoria4.html">Infantiles</a>
             <a href="categoria5.html">Pareja</a>
         </nav>
-    </header>
+    </div>
+</header>
     <main>
         <section class="categorias">
             <h2>Categorías de Juegos</h2>
@@ -55,11 +54,5 @@
     <footer>
         <p>&copy; 2023 Ludoteca Andana. Todos los derechos reservados.</p>
     </footer>
-    <script src="js/main.js"></script>
-    <script>
-        document.querySelector('.menu-btn').addEventListener('click', function() {
-            document.querySelector('.menu-opciones').classList.toggle('activo');
-        });
-    </script>
 </body>
 </html>
