--- a/contacto.html
+++ b/contacto.html
@@ -52,42 +52,47 @@
                 </div>
             </div>
         </nav>
-        
-        <!-- Header-->
-        <header class="bg-dark py-3">
-            <div class="container px-4 px-lg-5 my-3">
-                <div class="text-center text-white">
-                    <h1 class="display-6 fw-bolder mb-2">Productos</h1>
-                </div>
-            </div>
-        </header>
 
-        <!-- Section -->
+        <!-- Sección Contacto -->
         <section class="py-5">
-
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="mb-4 d-flex left gap-2">
-                    <a href="index.html" class="btn btn-outline-dark">
-                        <i class="bi bi-house-door me-1"></i> Inicio
-                    </a>
-                </div>
-            </div>
-
-            <!-- Filtros Productos -->
-            <div class="filtro-categorias text-center my-4">
-                <h5 class="mb-3">Categorías</h5>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="todos">Todos</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="estrategia">Estrategia</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="familiares">Familiares</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="infantiles">Infantiles</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="pareja">Pareja</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="party">Party Game</button>
-            </div>
-
-            <!-- Productos -->
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="container px-4 px-lg-5 mt-5">
-                    <div id="productos-lista" class="productos row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"></div>
+            <div class="container px-4 px-lg-5 my-5">
+                <div class="row justify-content-center">
+                    <div class="col-md-6 text-center mb-4">
+                        <img src="img/logo.png" alt="Logo Ludoteca Andana" class="img-fluid" style="max-width: 220px;">
+                    </div>
+                    <div class="col-lg-10 col-xl-8 mx-auto">
+                        <h2 class="fw-bolder mb-3">Formulario de Contacto</h2>
+                        <form id="form-contacto">
+                            <div class="row mb-3">
+                                <div class="col-md-6 mb-3 mb-md-0">
+                                    <input type="text" class="form-control" placeholder="Nombre" name="nombre" required>
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="email" class="form-control" placeholder="Correo electrónico" name="correo" required>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-md-6 mb-3 mb-md-0">
+                                    <input type="text" class="form-control" placeholder="Apellido Paterno" name="apellido_paterno" required>
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control" placeholder="Apellido Materno" name="apellido_materno" required>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <select class="form-select" id="motivo" name="motivo" required>
+                                    <option value="">Selecciona un motivo</option>
+                                    <!-- Opciones se cargan por JS -->
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <textarea class="form-control" rows="4" placeholder="Escribe tu mensaje aquí..." name="mensaje" required></textarea>
+                            </div>
+                            <div class="text-end">
+                                <button type="submit" class="btn btn-outline-dark">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
@@ -163,14 +168,27 @@
             </div>
         </div>
 
+        <!-- Modal de éxito -->
+        <div class="modal fade" id="modalExito" tabindex="-1" aria-labelledby="modalExitoLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalExitoLabel">¡Mensaje enviado!</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                </div>
+                <div class="modal-body">
+                    Tu mensaje ha sido enviado exitosamente. Nos pondremos en contacto pronto.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/index.js"></script>
-        <!-- Cargar componentes reutilizables -->
-        <script src="js/components.js"></script>
-        <!-- Cargar filtro productos -->
-        <script src="js/productos.js"></script>
-
+        <script src="js/contacto.js"></script>
     </body>
 </html>
