--- a/devoluciones.html
+++ b/devoluciones.html
@@ -52,42 +52,46 @@
                 </div>
             </div>
         </nav>
-        
-        <!-- Header-->
-        <header class="bg-dark py-3">
-            <div class="container px-4 px-lg-5 my-3">
-                <div class="text-center text-white">
-                    <h1 class="display-6 fw-bolder mb-2">Productos</h1>
-                </div>
-            </div>
-        </header>
 
-        <!-- Section -->
+        <!-- Sección Devoluciones y Cambios -->
         <section class="py-5">
-
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="mb-4 d-flex left gap-2">
-                    <a href="index.html" class="btn btn-outline-dark">
-                        <i class="bi bi-house-door me-1"></i> Inicio
-                    </a>
-                </div>
-            </div>
-
-            <!-- Filtros Productos -->
-            <div class="filtro-categorias text-center my-4">
-                <h5 class="mb-3">Categorías</h5>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="todos">Todos</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="estrategia">Estrategia</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="familiares">Familiares</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="infantiles">Infantiles</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="pareja">Pareja</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="party">Party Game</button>
-            </div>
-
-            <!-- Productos -->
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="container px-4 px-lg-5 mt-5">
-                    <div id="productos-lista" class="productos row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"></div>
+            <div class="container px-4 px-lg-5 my-5">
+                <div class="row justify-content-center">
+                    <div class="col-md-6 text-center mb-4">
+                        <img src="img/devolucion.png" alt="Devoluciones Ludoteca Andana" class="img-fluid" style="max-width: 380px;">
+                    </div>
+                    <div class="col-lg-10 col-xl-8 mx-auto">
+                        <h2 class="fw-bolder mb-3">Políticas de Devoluciones y Cambios</h2>
+                        <h4 class="mt-4 mb-2">Garantía Legal</h4>
+                        <ul>
+                            <li>Todos nuestros productos cuentan con una garantía legal de <strong>3 meses</strong> desde la fecha de compra.</li>
+                            <li>La garantía cubre fallas de fabricación o funcionamiento.</li>
+                        </ul>
+                        <h4 class="mt-4 mb-2">Requisitos para Cambios o Devoluciones</h4>
+                        <ul>
+                            <li>El producto debe estar en buenas condiciones, con sus accesorios, embalaje original y sin daños por mal uso.</li>
+                            <li>Debes presentar la boleta o comprobante de compra.</li>
+                            <li>No se aceptan devoluciones de productos con señales de uso indebido, incompletos o dañados por el cliente.</li>
+                        </ul>
+                        <h4 class="mt-4 mb-2">Motivos válidos para devolución o cambio</h4>
+                        <ul>
+                            <li>Producto defectuoso o con fallas de fábrica.</li>
+                            <li>Producto recibido distinto al comprado.</li>
+                            <li>Faltan piezas o accesorios esenciales.</li>
+                        </ul>
+                        <h4 class="mt-4 mb-2">¿Cómo solicitar un cambio o devolución?</h4>
+                        <ul>
+                            <li>Contáctanos a través del formulario de contacto o WhatsApp indicando tu número de pedido y motivo.</li>
+                            <li>Una vez aprobado, puedes coordinar el envío o retiro del producto para revisión.</li>
+                            <li>El proceso de evaluación puede tomar hasta 5 días hábiles.</li>
+                        </ul>
+                        <h4 class="mt-4 mb-2">Información adicional</h4>
+                        <ul>
+                            <li>Los costos de envío por devoluciones o cambios por falla corren por cuenta de Ludoteca Andana.</li>
+                            <li>Para cambios por motivos personales (no falla), el cliente asume los costos de envío.</li>
+                            <li>No se realizan devoluciones de dinero por arrepentimiento de compra, salvo lo dispuesto en la Ley del Consumidor.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
@@ -166,11 +170,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/index.js"></script>
-        <!-- Cargar componentes reutilizables -->
-        <script src="js/components.js"></script>
-        <!-- Cargar filtro productos -->
         <script src="js/productos.js"></script>
-
+        <script src="js/detalle_item.js"></script>
     </body>
 </html>
