--- a/nosotros.html
+++ b/nosotros.html
@@ -52,45 +52,36 @@
                 </div>
             </div>
         </nav>
-        
-        <!-- Header-->
-        <header class="bg-dark py-3">
-            <div class="container px-4 px-lg-5 my-3">
-                <div class="text-center text-white">
-                    <h1 class="display-6 fw-bolder mb-2">Productos</h1>
-                </div>
-            </div>
-        </header>
 
-        <!-- Section -->
+        <!-- Seccion Nosotros -->
         <section class="py-5">
-
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="mb-4 d-flex left gap-2">
-                    <a href="index.html" class="btn btn-outline-dark">
-                        <i class="bi bi-house-door me-1"></i> Inicio
-                    </a>
-                </div>
-            </div>
-
-            <!-- Filtros Productos -->
-            <div class="filtro-categorias text-center my-4">
-                <h5 class="mb-3">Categorías</h5>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="todos">Todos</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="estrategia">Estrategia</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="familiares">Familiares</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="infantiles">Infantiles</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="pareja">Pareja</button>
-                <button class="btn btn-outline-dark filtro-btn" data-categoria="party">Party Game</button>
-            </div>
-
-            <!-- Productos -->
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="container px-4 px-lg-5 mt-5">
-                    <div id="productos-lista" class="productos row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"></div>
+            <div class="container px-4 px-lg-5 my-5">
+                <div class="row gx-4 gx-lg-5 align-items-center">
+                    <div class="col-md-5 text-center mb-4 mb-md-0">
+                        <img src="img/logo.png" alt="Logo Ludoteca Andana" class="img-fluid" style="max-width: 310px;">
+                    </div>
+                    <div class="col-md-7">
+                        <h2 class="fw-bolder mb-3">Sobre Nosotros</h2>
+                        <p class="lead">
+                            <strong>Ludoteca Andana</strong> nace como un proyecto académico con el objetivo de simular una tienda de venta de juegos de mesa, fomentando el aprendizaje y la diversión a través de la tecnología y la creatividad.
+                        </p>
+                        <h4 class="mt-4 mb-2">Misión</h4>
+                        <p>
+                            Ofrecer una experiencia lúdica y educativa, acercando los mejores juegos de mesa a familias, amigos y entusiastas, promoviendo el entretenimiento sano y el desarrollo de habilidades sociales.
+                        </p>
+                        <h4 class="mt-4 mb-2">Visión</h4>
+                        <p>
+                            Ser reconocidos como una referencia en el mundo de los juegos de mesa, inspirando a nuevas generaciones a descubrir el valor del juego compartido y la importancia de la diversión en comunidad.
+                        </p>
+                        <h4 class="mt-4 mb-2">¿Cómo nace Ludoteca Andana?</h4>
+                        <p>
+                            Este proyecto surge en el contexto de una asignatura universitaria, con el propósito de aplicar conocimientos de desarrollo web y gestión de proyectos, simulando una tienda real para fines educativos.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
+
 
         <!-- Footer -->
         <footer class="py-5 bg-dark">
@@ -166,11 +157,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/index.js"></script>
-        <!-- Cargar componentes reutilizables -->
-        <script src="js/components.js"></script>
-        <!-- Cargar filtro productos -->
         <script src="js/productos.js"></script>
-
+        <script src="js/detalle_item.js"></script>
     </body>
 </html>
