[UPDATE] agrega mas productos y actualiza info de envios

--- a/envios.html
+++ b/envios.html
@@ -67,6 +67,7 @@
                             <li>Pedidos realizados <strong>antes de las 12:00 hrs</strong> se despachan el mismo día hábil en comunas seleccionadas (ver tabla).</li>
                             <li>Pedidos realizados <strong>después de las 12:00 hrs</strong> se despachan el día hábil siguiente.</li>
                             <li>En comunas periféricas (ej: Lampa, Colina, Padre Hurtado, etc.) el despacho es al día hábil siguiente.</li>
+                            <li><strong>Envío gratis por compras sobre $30.000.</strong></li>
                         </ul>
                         <div class="table-responsive mb-3">
                             <table class="table table-bordered table-sm align-middle">
