[UPDATE] se agrega paginacion en la lista de productos

--- a/productos.html
+++ b/productos.html
@@ -89,6 +89,7 @@
                 <div class="container px-4 px-lg-5 mt-5">
                     <div id="productos-lista" class="productos row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"></div>
                 </div>
+                <div id="paginacion" class="d-flex justify-content-end mt-4"></div>
             </div>
         </section>
 
