[FIX] ajusta responsividad de objetos

--- a/devoluciones.html
+++ b/devoluciones.html
@@ -58,8 +58,7 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="row justify-content-center">
                     <div class="col-md-6 text-center mb-4">
-                        <img src="img/devolucion.png" alt="Devoluciones Ludoteca Andana" class="img-fluid" style="max-width: 380px;">
-                    </div>
+                        <img src="img/devolucion.png" alt="Devoluciones Ludoteca Andana" class="img-fluid w-100" style="max-width: 500px;">                    </div>
                     <div class="col-lg-10 col-xl-8 mx-auto">
                         <h2 class="fw-bolder mb-3">Políticas de Devoluciones y Cambios</h2>
                         <h4 class="mt-4 mb-2">Garantía Legal</h4>
@@ -169,8 +168,6 @@
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/productos.js"></script>
-        <script src="js/detalle_item.js"></script>
+
     </body>
 </html>
