--- a/nosotros.html
+++ b/nosotros.html
@@ -58,7 +58,7 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="row gx-4 gx-lg-5 align-items-center">
                     <div class="col-md-5 text-center mb-4 mb-md-0">
-                        <img src="img/logo.png" alt="Logo Ludoteca Andana" class="img-fluid" style="max-width: 310px;">
+                        <img src="img/logo.png" alt="Logo Ludoteca Andana" class="img-fluid">
                     </div>
                     <div class="col-md-7">
                         <h2 class="fw-bolder mb-3">Sobre Nosotros</h2>
@@ -156,8 +156,6 @@
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/productos.js"></script>
-        <script src="js/detalle_item.js"></script>
+
     </body>
 </html>
