--- a/envios.html
+++ b/envios.html
@@ -58,7 +58,7 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="row justify-content-center">
                     <div class="col-md-6 text-center mb-4">
-                        <img src="img/envio.png" alt="Logo Ludoteca Andana" class="img-fluid" style="max-width: 380px;">
+                        <img src="img/envio.png" alt="Devoluciones Ludoteca Andana" class="img-fluid w-100" style="max-width: 500px;">                    </div>
                     </div>
                     <div class="col-lg-10 col-xl-8 mx-auto">
                         <h2 class="fw-bolder mb-3">Políticas de Envío y Retiros</h2>
@@ -197,8 +197,6 @@
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/productos.js"></script>
-        <script src="js/detalle_item.js"></script>
+
     </body>
 </html>
