[FIX] elimina required de los input para usar validacion js unicamente y por html

--- a/registro.html
+++ b/registro.html
@@ -62,29 +62,29 @@
                         <form id="form-registro" autocomplete="off">
                             <div class="mb-3">
                                 <label for="nombre" class="form-label">Nombre completo</label>
-                                <input type="text" class="form-control" id="nombre" name="nombre" required>
+                                <input type="text" class="form-control" id="nombre" name="nombre">
                             </div>
                             <div class="mb-3">
                                 <label for="usuario" class="form-label">Nombre de usuario</label>
-                                <input type="text" class="form-control" id="usuario" name="usuario" required>
+                                <input type="text" class="form-control" id="usuario" name="usuario">
                             </div>
                             <div class="mb-3">
                                 <label for="correo" class="form-label">Correo electrónico</label>
-                                <input type="email" class="form-control" id="correo" name="correo" required>
+                                <input type="email" class="form-control" id="correo" name="correo">
                             </div>
                             <div class="row mb-3">
                                 <div class="col-md-6 mb-3 mb-md-0">
                                     <label for="clave" class="form-label">Contraseña</label>
-                                    <input type="password" class="form-control" id="clave" name="clave" required>
+                                    <input type="password" class="form-control" id="clave" name="clave">
                                 </div>
                                 <div class="col-md-6">
                                     <label for="clave2" class="form-label">Repetir contraseña</label>
-                                    <input type="password" class="form-control" id="clave2" name="clave2" required>
+                                    <input type="password" class="form-control" id="clave2" name="clave2">
                                 </div>
                             </div>
                             <div class="mb-3">
                                 <label for="nacimiento" class="form-label">Fecha de nacimiento</label>
-                                <input type="date" class="form-control" id="nacimiento" name="nacimiento" required>
+                                <input type="date" class="form-control" id="nacimiento" name="nacimiento">
                             </div>
                             <div class="mb-3">
                                 <label for="direccion" class="form-label">Dirección de despacho (opcional)</label>
